--- a/web_client/ea_web-github/addons/web/static/src/css/data_import.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/data_import.css
@@ -43,5 +43,6 @@
     max-height: 300px;
     overflow-y: auto;
     padding-right: 20px;
-    border: 1px solid #e3e3e3
+    border: 1px solid #e3e3e3;
+    background: #FFF;
 }
