--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -39,7 +39,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//notebook" position="inside">
                     <page string="Stock Picking">
-                        <field name="stock_picking_ids" nolabel="1" context="{'type':'out', 'form_view_ref':'stock.view_picking_out_form', 'tree_view_ref':'stock.view_picking_out_tree'}"/>
+                        <field name="stock_picking_ids" nolabel="1" context="{'view_print': True, 'type':'out', 'form_view_ref':'stock.view_picking_out_form', 'tree_view_ref':'stock.view_picking_out_tree'}"/>
                     </page>
                 </xpath>
             </field>
