Add print button on revision tree list

--- a/sale_order_version/views/sale_view.xml
+++ b/sale_order_version/views/sale_view.xml
@@ -38,6 +38,7 @@
                                 <field name="state"/>
                                 <field name="sale_version_id"/>
                                 <field name="revision_note"/>
+                                <button name="print_order" string="Print" type="object" icon="gtk-print" />
                             </tree>
                         </field>
                     </page>
