--- a/sale_order_confirm/views/sale_order_confirm_view.xml
+++ b/sale_order_confirm/views/sale_order_confirm_view.xml
@@ -211,7 +211,7 @@
                             <field name="customer_validation" invisible="1"/>
                         </page>
 
-                        <page string="History" groups="base.group_extended">
+                        <page string="History" attrs="{'invisible':[('state', 'in', ('draft'))]}" groups="base.group_extended">
                             <separator colspan="4" string="Packings"/>
                             <field colspan="4" name="picking_ids" nolabel="1"/>
                             <separator colspan="4" string="Invoices"/>
