--- a/project_extended/views/project_view_menu.xml
+++ b/project_extended/views/project_view_menu.xml
@@ -52,5 +52,9 @@
             parent="menu_project_wbs"
             sequence="10"/>
 
+        <record id="base.menu_project_report" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6, 0, [ref('base.group_reporting')])]" />
+        </record>
+
     </data>
 </openerp>
