--- a/sale_order_confirm/views/sale_order_menu.xml
+++ b/sale_order_confirm/views/sale_order_menu.xml
@@ -129,6 +129,8 @@
             <field name="groups_id" eval="[(6, 0, [ref('base.group_reporting')])]" />
         </record>
 
+        <delete id="sale_journal.sale_journal_sale_order_tree" model="ir.ui.view"/>
+
     </data>
 </openerp>
 
