--- a/purchase_no_gap/views/purchase_view.xml
+++ b/purchase_no_gap/views/purchase_view.xml
@@ -10,9 +10,13 @@
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
                 <field name="name" position="replace" >
-                    
                     <field name="name" readonly="1"/>
-
+                </field>
+                <field name="warehouse_id" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </field>
+                <field name="warehouse_id" position="after">
+                    <field name="shop_id" on_change="onchange_shop_id(shop_id, context)" widget="selection" />
                 </field>
                 
             </field>
