--- a/product_extended/views/product_view.xml
+++ b/product_extended/views/product_view.xml
@@ -37,8 +37,7 @@
             <field name="arch" type="xml">
                 <xpath expr="/form/notebook/page/group[2]" position="after">
                     <group colspan="4" col="4"
-                           groups="product_bom.group_supplier_product,product_bom.group_sell_price,product_bom.group_cost_price">
-                        <separator string="Extra information" colspan="4"/>
+                           groups="product_bom.group_supplier_product,product_bom.group_sell_price,product_bom.group_cost_price" string="Extra information" >
                         <group colspan="2" col="2">
                             <field name="last_customer_id" groups="product_bom.group_sell_price"/>
                             <field name="last_sale_price" groups="product_bom.group_sell_price"/>
