add default code on stock move

--- a/stock_move_extended/views/stock_move_view.xml
+++ b/stock_move_extended/views/stock_move_view.xml
@@ -89,6 +89,9 @@
             <field name="type">form</field>
             <field name="inherit_id" ref="stock.view_move_tree" />
             <field name="arch" type="xml">
+                <field name="name" position="before">
+                    <field name="default_code" />
+                </field>
                 <field name="picking_id" position="after">
                     <button name="picking_open" type="object" icon="STOCK_INDEX" attrs=""/>
                 </field>
