--- a/account_due_list/views/payment_view.xml
+++ b/account_due_list/views/payment_view.xml
@@ -242,6 +242,39 @@
         </record>
 
         <!-- Account Ledger -->
+
+        <record id="view_account_ledger_tree" model="ir.ui.view">
+            <field name="name">Account Ledger Tree</field>
+            <field name="model">account.move.line</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="20"/>
+            <field name="arch" type="xml">
+                <tree string="Account Ledger">
+                    <field name="move_id" required="False" readonly="1" />
+                    <button name="action_view_account_move" string="Open Journal Entries" type="object" icon="gtk-zoom-in"/>
+                    <field name="ref" readonly="1"/>
+                    <field name="date" readonly="1"/>
+                    <field name="period_id" invisible="context.get('period_id', False)"/>
+                    <field name="statement_id" domain="[('state', '!=', 'confirm'),('journal_id.type', '=', 'bank')]"
+                           invisible="True"/>
+                    <field name="partner_id" />
+                    <field name="account_id" domain="[('journal_id', '=', journal_id),('type','!=','view'), ('type','!=','closed')]" on_change="onchange_account_id(account_id, partner_id)"/>
+                    <field name="name" />
+                    <field name="date_maturity" />
+                    <field name="journal_id" context="{'journal_id': journal_id}"/>
+                    <field name="debit" sum="Total debit" />
+                    <field name="credit" sum="Total credit" />
+                    <field name="account_tax_id" domain="[('parent_id', '=' ,False)]"
+                           context="{'journal_id': journal_id}" />
+                    <field name="residual" sum="Total residual" />
+                    <field name="analytic_account_id"/>
+                    <field name="state" width="60" />
+                    <field name="reconcile_id"/>
+                    <button name="action_view_reconcile" string="Open Reconcile" type="object" icon="gtk-zoom-in"/>
+                </tree>
+            </field>
+        </record>
+
         <record id="action_account_ordered" model="ir.actions.act_window">
             <field name="name">Account Ledger</field>
             <field name="res_model">account.move.line</field>
@@ -252,8 +285,17 @@
             <field name="context">{'search_default_start_year': 1, 'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}</field>
         </record>
 
+        <record model="ir.actions.act_window.view"
+			id="action_account_ordered_tree_mode">
+			<field name="sequence" eval="1" />
+			<field name="view_mode">tree</field>
+			<field name="view_id" ref="view_account_ledger_tree" />
+			<field name="act_window_id" ref="action_account_ordered" />
+		</record>
+
         <menuitem name="Account Ledger" parent="account.menu_finance_entries" action="action_account_ordered"
                   id="menu_action_account_ledger" sequence="5"/>
+
 
     </data>
 </openerp>
