--- a/project_extended/views/project.xml
+++ b/project_extended/views/project.xml
@@ -34,7 +34,7 @@
                                 <field name="sequence" invisible="not context.get('seq_visible', False)"/>
                                 <field name="name"/>
                                 <field name="user_id"/>
-                                <field name="delegated_user_id"/>
+                                <field name="delegated_user_id" groups="project.group_delegate_task"/>
                                 <field name="planned_hours" widget="float_time"/>
                                 <field name="effective_hours" widget="float_time" sum="Spent Hours" invisible="1"/>
                                 <field name="remaining_hours" widget="float_time" sum="Remaining Hours"/>
