--- a/stock_move_extended/views/stock_move_view.xml
+++ b/stock_move_extended/views/stock_move_view.xml
@@ -108,6 +108,9 @@
                     <field name="product_qty" on_change="onchange_quantity(product_id, product_qty, product_uom, product_uos)" sum="Product SUM"/>
                     <field name="direction" />
                 </field>
+                <field name="product_qty" position="before">
+                    <field name="running_balance" invisible="not context.get('all_from_location',False)"/>
+                </field>
 
             </field>
         </record>
@@ -146,6 +149,7 @@
                     <newline/>
                     <field name="location_id" />
                     <field name="location_dest_id" />
+                    <field name="location_id" string="Location" filter_domain="['|', ('location_id','child_of',self),('location_dest_id','child_of',self)]" context="{'all_from_location': True}"/>
                 </field>
             </field>
         </record>
