--- a/stock_move_extended/views/stock_move_view.xml
+++ b/stock_move_extended/views/stock_move_view.xml
@@ -139,11 +139,13 @@
             <field name="inherit_id" ref="stock.view_move_search"/>
             <field name="type">search</field>
             <field name="arch" type="xml">
-                <field name="origin" position="before">
-                    <field name="date_from" filter_domain="[('date','&gt;=',self)]"/>
-                    <field name="date_to" filter_domain="[('date','&lt;=',self)]"/>
+                
+                <field name="product_id" position="before">
+                    <field name="date_from" filter_domain="[('date','&gt;=',self)]" context="{'purchase_order_limit': 30, 'date_from': self}"/>
+                    <field name="date_to" filter_domain="[('date','&lt;=',self)]" context="{'purchase_order_limit': 30, 'date_to': self}"/>
                     <separator orientation="vertical"/>
                 </field>
+
                 <field name="product_id" position="after">
                         <field name="picking_id" />
                 </field>
