--- a/project_extended/views/project.xml
+++ b/project_extended/views/project.xml
@@ -35,7 +35,7 @@
                                 <field name="name"/>
                                 <field name="user_id"/>
                                 <field name="delegated_user_id" groups="project.group_delegate_task"/>
-                                <field name="planned_hours" widget="float_time"/>
+                                <field name="planned_hours" widget="float_time" sum="Planned Hours"/>
                                 <field name="effective_hours" widget="float_time" sum="Spent Hours" invisible="1"/>
                                 <field name="remaining_hours" widget="float_time" sum="Remaining Hours"/>
                                 <field name="date_deadline"/>
