--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -15,7 +15,7 @@
     font-weight: 400;
     src: local('Roboto Regular'),
     local('Roboto-Regular'),
-    url(http://themes.googleusercontent.com/static/fonts/roboto/v11/2UX7WLTfW3W8TclTUvlFyQ.woff) format('woff');
+    url(https://themes.googleusercontent.com/static/fonts/roboto/v11/2UX7WLTfW3W8TclTUvlFyQ.woff) format('woff');
 }
 @font-face {
     font-family: 'Roboto';
@@ -23,7 +23,7 @@
     font-weight: 700;
     src: local('Roboto Bold'),
     local('Roboto-Bold'),
-    url(http://themes.googleusercontent.com/static/fonts/roboto/v11/d-6IYplOFocCacKzxwXSOD8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+    url(https://themes.googleusercontent.com/static/fonts/roboto/v11/d-6IYplOFocCacKzxwXSOD8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 @font-face {
     font-family: 'Roboto';
@@ -31,7 +31,7 @@
     font-weight: 400;
     src: local('Roboto Italic'),
     local('Roboto-Italic'),
-    url(http://themes.googleusercontent.com/static/fonts/roboto/v11/1pO9eUAp8pSF8VnRTP3xnvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+    url(https://themes.googleusercontent.com/static/fonts/roboto/v11/1pO9eUAp8pSF8VnRTP3xnvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 button.oe_button_small {
@@ -70,7 +70,7 @@ body.openerp {
 
 .openerp, 
 .openerp textarea, 
-.openerp input, 
+.openerp input,
 .openerp select, 
 .openerp option,
 .openerp button, 
